# twitch-gemini-assistant

./: .env.example  .gitignore  Cargo.toml  README.md  todo.md
.shuttle/: config.toml
migrations/: init.sql
src/: main.rs  prompt.rs
src/api/: mod.rs  website_config.rs
src/chaos/: mod.rs
src/command_framework/: command.rs  command_framework.rs  mod.rs
src/commands/: mod.rs  play.rs
src/commands/chaos/: mod.rs
src/donation_alerts/: auth.rs  mod.rs
src/event_poller/: mod.rs
src/open_ai/: mod.rs  prompt.rs  types.rs
src/pg/: pg.rs
src/spotify/: mod.rs
src/terminal/: mod.rs
src/twitch/: api.rs  builder.rs  chat_message.rs  mod.rs
