[package]
name = "twitch-sui-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "process", "time", "io-std", "fs"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
twitch-irc = "5.0.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
deadpool-postgres = "0.14.1"
deadpool = "0.12.2"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
regex = "1.11.1"
anyhow = "1.0.98"
uuid = { version = "1", features = ["serde", "v4"] }
time = "0.3.41"
json5 = "0.4.1"
actix-web = "4.11.0"
rspotify = { version = "0.15.0", features = ["env-file", "cli"] }
